fixed dark mode

--- a/react-portfolio/src/components/Home/Home.module.css
+++ b/react-portfolio/src/components/Home/Home.module.css
@@ -31,3 +31,9 @@
 .Home .Container h1 {
   margin: 0;
 }
+
+@media (prefers-color-scheme: dark) {
+  .Home .Container .Name {
+    color: rgb(41, 40, 40);
+  }
+}
