--- a/react-portfolio/src/components/NavBar/NavBar.module.css
+++ b/react-portfolio/src/components/NavBar/NavBar.module.css
@@ -35,7 +35,7 @@
   display: none;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 900px) and (prefers-color-scheme: dark) {
   .NavBar .Navigation {
     display: none;
   }
